--- a/src/main/java/com/olympics/测试指南.md
+++ b/src/main/java/com/olympics/测试指南.md
@@ -11,7 +11,7 @@
 | **陈永顺** | **1854002** |
 | **马逸萧** | **1854313** |
 
-Olympics.java集成了所有设计模式的测试，运行即可依次对每个设计模式进行测试。
+/src/main/java/com/olympics路径下的Olympics.java集成了所有设计模式的测试，运行即可依次对每个设计模式进行测试。
 
 或者在每个设计模式对应的文件夹里进行每个设计模式的测试。
 
